# curl-android

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
modules/curl_static/: module.json
modules/curl_static/libs/android.armeabi-v7a/: abi.json
modules/nghttp3_static/libs/android.arm64-v8a/: abi.json
modules/ngtcp2_crypto_static/: module.json
modules/ngtcp2_crypto_static/libs/android.arm64-v8a/: abi.json
modules/ngtcp2_crypto_static/libs/android.armeabi-v7a/: abi.json
modules/ngtcp2_static/: module.json
modules/ngtcp2_static/libs/android.x86/: abi.json
modules/ngtcp2_static/libs/android.x86_64/: abi.json
modules/ssl_static/: module.json
modules/ssl_static/libs/android.x86_64/: abi.json
test/: main.cpp
